<resources>
    <string name="app_name">Gestão de Pessoas Dependentes</string>
    <string name="nameListaPlanos">Plano</string>
    <string name="nameCriarPlano">Criar Plano</string>
    <string name="nameDetalhesRefeicao">Refeição</string>
    <string name="button">PLANO</string>
    <string name="labelRefeicao">Refeição:</string>
    <string name="labelHoraRefeicao">Hora:</string>
    <string name="labelInformacao">Informação:</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="buttonGravar">Gravar</string>
    <string name="labelListaHora">Hora</string>
    <string name="labelListaRefeicao">Refeição</string>
    <string name="labelListaInformacao">Informação</string>
    <string name="labelNome">Nome:</string>
    <string name="labelCardClassificacao">Alimentação</string>
    <string name="labelCardMobilidade">Mobilidade</string>
    <string name="botaoPlano">Plano</string>
    <string name="botaoHistorico">Historico</string>
    <string name="botaoOk">OK</string>
    <string name="buttonRemover">Remover</string>
    <string name="textViewHoraPrevista">Hora prevista:</string>
    <string name="labelRadioRealizada">Realizada</string>
    <string name="labelRadioNaoRealizada">Não Realizada</string>
    <string name="labelHoraRealizada">Hora Realizada:</string>
    <string name="labelObservacao">Observação:</string>
    <string name="labelHoraRealizacao">Realizada</string>
    <string name="labelButtonAnterior">Anterior</string>
    <string name="labelButtonProximo">Próximo</string>
    <string name="labelDetalhesHoraPrevista">Hora Prevista:</string>
    <string name="labelDetalhesRefeicao">Refeicao:</string>
    <string name="labelDetalhesInformacao">Informação:</string>
    <string name="labelDetalhesHoraRealizada">Hora Realizada:</string>
    <string name="labelDetalhesData">Data:</string>
    <string name="labelDetalhesObservacoes">Observações:</string>
    <string name="labelNomeDoente">Nome do Doente:</string>
    <string name="labelIntervaloTempo">Intervalo da refeição:</string>
</resources>