<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNomeUtilizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:text="@string/labelNome"
        app:layout_constraintEnd_toStartOf="@+id/textViewInserirNome"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInserirNome"
        android:layout_width="124dp"
        android:layout_height="18dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNomeUtilizador"
        app:layout_constraintEnd_toStartOf="@+id/textViewLabelHora"
        app:layout_constraintTop_toTopOf="@+id/editTextTime"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewLabelHora"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:text="@string/labelHoraRefeicao"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime"
        app:layout_constraintEnd_toStartOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAlimentacao"
        android:layout_width="291dp"
        android:layout_height="233dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime">

        <TextView
            android:id="@+id/textViewAlimentacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/labelCardClassificacao" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDetalhesAlimentacao"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="39dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/textViewHoraRefeicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:text=" " />

            <TextView
                android:id="@+id/textViewRefeicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="65dp"
                android:text=" " />

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/botaoOk" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/botoesAlimentacao"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="176dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="15dp">


            <Button
                android:id="@+id/buttonPlano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/roundedbutton"
                android:text="Plano" />

            <Button
                android:id="@+id/buttonHistorico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="145dp"
                android:background="@drawable/roundedbutton"
                android:text="Historico" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>